# polyphemus

./: .gitignore  CMakeLists.txt  GLTFmesh.cpp  GLTFmodel.cpp  README.md  camera.cpp  camera.h  chessScene.cpp  chessScene.h  customTextureScene.cpp  customTextureScene.h  fonts.h  frostbiteModelScene.cpp  frostbiteModelScene.h  genericModelScene.cpp  genericModelScene.h  geometry.h  inputs.h  main.cpp  mesh.cpp  model.cpp  model.h  render.cpp  render.h  scene.cpp  scene.h  scenePicker.cpp  scenePicker.h  shaders.cpp  shaders.h  textures.cpp  textures.h  transform.cpp  transform.h
deprecated/: GLTFgeometry.h  GLTFmodel.cpp  GLTFmodel.h
shaders/: customtexPBR.frag  fallback.frag  fallback.vert  frostbitePBR.frag  frostbitePBR.vert  helloPBR.frag  hellocam.vert  hellomodel.frag  hellomodel.vert  hellotex.frag  hellotex.vert  hellotex_split.frag  hellotri.frag  hellotri.vert  texPBR.frag  texPBR.vert
